cmake_minimum_required(VERSION 3.1)

# point cloud
add_subdirectory(Tutorial_101_Model_PointCloud)
add_subdirectory(Tutorial_102_Model_PointCloud_Property)
add_subdirectory(Tutorial_103_Model_PointCloud_IO)

# mesh
add_subdirectory(Tutorial_104_Model_SurfaceMesh)
add_subdirectory(Tutorial_105_Model_SurfaceMesh_Connectivity)
add_subdirectory(Tutorial_106_Model_SurfaceMesh_Property)
add_subdirectory(Tutorial_107_Model_SurfaceMesh_IO)

# graph
add_subdirectory(Tutorial_108_Model_Graph)
add_subdirectory(Tutorial_109_Model_Graph_Connectivity)
add_subdirectory(Tutorial_110_Model_Graph_Property)
add_subdirectory(Tutorial_111_Model_Graph_IO)

# ui, viewer, and camera
add_subdirectory(Tutorial_201_Viewer_imgui)
if (EASY3D_ENABLE_QT)
    add_subdirectory(Tutorial_202_Viewer_Qt)
endif ()
add_subdirectory(Tutorial_203_Viewer_CompositeView)
add_subdirectory(Tutorial_204_Viewer_CameraInterpolation)
add_subdirectory(Tutorial_205_Viewer_RealCamera)

# drawable objects and basic rendering
add_subdirectory(Tutorial_301_Drawable_Primitives)
add_subdirectory(Tutorial_302_Drawable_Imposters)
add_subdirectory(Tutorial_303_Drawable_ScalarField)
add_subdirectory(Tutorial_304_Drawable_VectorField)
add_subdirectory(Tutorial_305_Drawable_Texture)
add_subdirectory(Tutorial_306_Drawable_Image)
add_subdirectory(Tutorial_307_Drawable_Tessellator)
add_subdirectory(Tutorial_308_Drawable_TexturedMesh)
add_subdirectory(Tutorial_309_Drawable_Text)

# user interaction
add_subdirectory(Tutorial_401_Interaction_ModelPicker)
add_subdirectory(Tutorial_402_Interaction_FacePicker)
add_subdirectory(Tutorial_403_Interaction_PointSelection)

# rendering techniques
add_subdirectory(Tutorial_501_Renderering_AmbientOcclusion)
add_subdirectory(Tutorial_502_Renderering_HardShadow)
add_subdirectory(Tutorial_503_Renderering_SoftShadow)
add_subdirectory(Tutorial_504_Renderering_Transparency)
add_subdirectory(Tutorial_505_Renderering_EyeDomeLighting)
add_subdirectory(Tutorial_506_Renderering_DepthMaps)

# algorithms - of point cloud
add_subdirectory(Tutorial_601_Algorithm_Cloud_NormalEstimation)
add_subdirectory(Tutorial_602_Algorithm_Cloud_SurfaceReconstruction)
add_subdirectory(Tutorial_603_Algorithm_Cloud_PlaneExtraction)
#add_subdirectory(Tutorial_604_Algorithm_Cloud_DownSampling)    #TODO

# algorithms - surface mesh
#add_subdirectory(Tutorial_701_Algorithm_Mesh_Curvature)        #TODO
#add_subdirectory(Tutorial_702_Algorithm_Mesh_Smoothing)        #TODO
#add_subdirectory(Tutorial_703_Algorithm_Mesh_Fairing)          #TODO
#add_subdirectory(Tutorial_704_Algorithm_Mesh_HoleFilling)      #TODO
#add_subdirectory(Tutorial_705_Algorithm_Mesh_Remeshing)        #TODO
#add_subdirectory(Tutorial_706_Algorithm_Mesh_Simplification)   #TODO
#add_subdirectory(Tutorial_707_Algorithm_Mesh_Subdidivision)    #TODO